--- a/blank.html
+++ b/blank.html
@@ -49,16 +49,154 @@
     </p>
   </div>
 
-  <div class="footer">
-    <div class="container">
-      Hi, I am footer component.
+  </div>
+  <!--site-inner-->
+  <footer class="footer">
+    <div class="footer-inner">
+      <nav class="footer__left">
+        <ul class="footer__left-menu-1">
+          <li class="menu-item"><a href="#" class="menu-link">Входные двери</a></li>
+          <li class="menu-item"><a href="#" class="menu-link">Межкомнатные двери</a></li>
+          <li class="menu-item"><a href="#" class="menu-link">Межкомнатные арки</a></li>
+          <li class="menu-item"><a href="#" class="menu-link">Дверная фурнитура</a></li>
+          <li class="menu-item"><a href="#" class="menu-link">Двери для бани и сауны</a></li>
+          <li class="menu-item"><a href="#" class="menu-link">Напольные покрытия</a></li>
+          <li class="menu-item"><a href="#" class="menu-link">Монтаж и реставрация</a></li>
+        </ul>
+
+        <ul class="footer__left-menu-2">
+          <li class="menu-item"><a href="#" class="menu-link">О магазине</a></li>
+          <li class="menu-item"><a href="#" class="menu-link">Вакансии</a></li>
+          <li class="menu-item"><a href="#" class="menu-link">Оплата и доставка</a></li>
+          <li class="menu-item"><a href="#" class="menu-link">Услуги</a></li>
+          <li class="menu-item"><a href="#" class="menu-link">Адреса магазинов</a></li>
+        </ul>
+      </nav>
+      <div class="footer__right">
+        <div class="footer__right-title">Контакты</div>
+        <div class="footer__right-contacts">
+          <div class="footer__right-contacts-top">
+
+            <div class="phone-wr">
+              <div class="phone-title">
+                Круглосуточная горячая линия
+              </div>
+
+              <div class="phone-numbers">
+                <a href="tel:84951543831">8 (495) 154-38-31</a>
+              </div>
+
+            </div>
+            <div class="foot-adress">
+              г. Москва, Ленинский проспект 161а корпус 3
+            </div>
+          </div>
+          <div class="footer__right-contacts-bottom">
+            <div class="footer-button-wrapper">
+              <button class="footer-buton" data-toggle="modal" data-target="#exampleModalCenter">Вызвать замерщика</button>
+            </div>
+
+            <div class="footer-socials">
+              <div class="soc-inner">
+                <a href="#" class="soc-item fb-soc">
+                  <svg width="9" height="19" viewBox="0 0 9 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M6.88476 3.2295C5.69888 3.2295 5.62175 3.76791 5.62175 4.6282V6.16224H8.58643L8.329 9.33857H5.62175V19H1.90892V9.33857H0V6.16224H1.90892V4.19806C1.90892 1.50794 3.12082 0 6.16264 0C7.22026 0 7.99349 0.161426 9 0.376984L8.53532 3.41799C8.01952 3.30973 7.32342 3.2295 6.88476 3.2295Z" fill="#282828" />
+                  </svg>
+                </a>
+                <a href="#" class="soc-item vk-soc">
+                  <svg width="22" height="12" viewBox="0 0 22 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M21.8038 10.7034C22.5326 11.8582 20.9965 11.9491 20.9965 11.9491L18.0582 11.989C18.0582 11.989 17.4269 12.1079 16.5957 11.5625C15.4977 10.8412 14.4609 8.96619 13.6536 9.20994C12.8339 9.45968 12.8607 11.1469 12.8607 11.1469C12.8607 11.1469 12.8655 11.5065 12.6799 11.6983C12.4762 11.9071 12.0792 11.9491 12.0792 11.9491H10.7641C10.7641 11.9491 7.86306 12.1169 5.30734 9.57256C2.52111 6.79845 0.0591262 1.29318 0.0591262 1.29318C0.0591262 1.29318 -0.082431 0.932559 0.072519 0.757741C0.245642 0.561945 0.717187 0.548958 0.717187 0.548958L3.86018 0.528979C3.86018 0.528979 4.15669 0.57593 4.36808 0.724775C4.54311 0.847647 4.64163 1.07841 4.64163 1.07841C4.64163 1.07841 5.14952 2.30613 5.82288 3.41697C7.13613 5.58771 7.74732 6.06222 8.19304 5.82946C8.8425 5.49081 8.64833 2.76265 8.64833 2.76265C8.64833 2.76265 8.65981 1.77268 8.32121 1.33114C8.05818 0.990499 7.56368 0.889604 7.34465 0.861633C7.1677 0.838657 7.45847 0.447064 7.83436 0.271247C8.39964 0.0055241 9.39917 -0.0084614 10.5795 0.00252716C11.4986 0.0115178 11.7645 0.0664607 12.1232 0.148375C13.2069 0.399114 12.8396 1.36511 12.8396 3.68269C12.8396 4.42492 12.7 5.46884 13.2595 5.81547C13.5006 5.96332 14.0898 5.83745 15.5627 3.44594C16.261 2.31312 16.7842 0.97951 16.7842 0.97951C16.7842 0.97951 16.898 0.742757 17.0768 0.639864C17.2576 0.535972 17.5034 0.568937 17.5034 0.568937L20.8119 0.548958C20.8119 0.548958 21.8057 0.436076 21.9664 0.864629C22.1347 1.31516 21.5953 2.36607 20.2437 4.08827C18.0247 6.91633 17.777 6.6516 19.6201 8.2869C21.3801 9.84927 21.7445 10.6095 21.8038 10.7034Z" fill="#282828" />
+                  </svg>
+                </a>
+                <a href="#" class="soc-item twitter-soc">
+                  <svg width="18" height="15" viewBox="0 0 18 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M15.9295 2.39205C17.2207 1.39474 17.5497 0.275573 17.5497 0.275573C17.4008 0.368368 15.9452 0.995438 15.1209 1.19696C14.5502 0.50428 13.7865 0 12.42 0C9.00321 0 8.4261 3.5787 8.81942 4.60039C4.7603 4.59851 1.88942 1.43317 1.25992 0.733925C-0.110277 2.83166 1.43636 5.22371 2.25057 5.70456C2.25057 5.70456 1.22224 5.66519 0.719555 5.24527C0.665335 7.83884 2.64574 8.72274 3.59963 9.10985C3.14933 9.29357 2.32226 9.18297 1.9804 9.10985C2.80839 11.41 4.73457 11.7034 5.39991 11.7794C2.88007 13.8396 0 13.251 0 13.251C1.36928 14.4029 3.52795 15 5.58095 15C13.0679 15 16.3275 8.50247 16.2006 3.68087C17.4302 2.83634 18 1.74811 18 1.74811C17.8052 1.94682 16.3955 2.26832 15.9295 2.39205Z" fill="#1DA1F2" />
+                  </svg>
+                </a>
+                <a href="#" class="soc-item insta-soc">
+                  <svg width="20" height="21" viewBox="0 0 20 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M14.2257 21H5.77336C2.58451 21 0 18.2855 0 14.9363V6.06368C0 2.71543 2.58451 0 5.77336 0H14.2257C17.4146 0 20 2.71543 20 6.06368V14.9363C20 18.2855 17.4146 21 14.2257 21ZM18.1098 5.78784C18.1098 3.65749 16.4649 1.92992 14.4366 1.92992C14.4366 1.92992 12.3046 1.8192 10.219 1.8192C7.88258 1.8192 5.56345 1.92992 5.56345 1.92992C3.53419 1.92992 1.88932 3.65749 1.88932 5.78784C1.88932 5.78784 1.8366 8.2847 1.8366 10.6928C1.8366 12.9367 1.88932 15.1024 1.88932 15.1024C1.88932 17.2337 3.53419 18.9613 5.56345 18.9613C5.56345 18.9613 7.85805 19.071 10.1136 19.071C12.2928 19.071 14.4366 18.9613 14.4366 18.9613C16.4649 18.9613 18.1098 17.2337 18.1098 15.1024C18.1098 15.1024 18.2152 12.9367 18.2152 10.6928C18.2152 8.2847 18.1098 5.78784 18.1098 5.78784ZM15.3281 6.11808C14.661 6.11808 14.1203 5.55113 14.1203 4.85151C14.1203 4.15094 14.661 3.58399 15.3281 3.58399C15.9951 3.58399 16.5358 4.15094 16.5358 4.85151C16.5358 5.55113 15.9951 6.11808 15.3281 6.11808ZM9.99911 15.929C7.14378 15.929 4.82915 13.4989 4.82915 10.5C4.82915 7.50205 7.14378 5.07199 9.99911 5.07199C12.8553 5.07199 15.1699 7.50205 15.1699 10.5C15.1699 13.4989 12.8553 15.929 9.99911 15.929ZM9.99911 6.9456C8.15887 6.9456 6.66576 8.51282 6.66576 10.4446C6.66576 12.3784 8.15887 13.9456 9.99911 13.9456C11.8412 13.9456 13.3333 12.3784 13.3333 10.4446C13.3333 8.51282 11.8412 6.9456 9.99911 6.9456Z" fill="#282828" />
+                  </svg>
+                </a>
+                <a href="#" class="soc-item ok-soc">
+                  <svg width="12" height="19" viewBox="0 0 12 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd" d="M5.99999 0C8.80338 0 11.077 2.22833 11.077 4.97608C11.077 7.72455 8.80338 9.95233 5.99999 9.95233C3.19593 9.95233 0.923058 7.72455 0.923058 4.97608C0.923058 2.22833 3.19593 0 5.99999 0ZM6.00012 7.23822C7.27453 7.23822 8.30768 6.22563 8.30768 4.97603C8.30768 3.72744 7.27453 2.71443 6.00012 2.71443C4.72537 2.71443 3.6923 3.72744 3.6923 4.97603C3.6923 6.22563 4.72537 7.23822 6.00012 7.23822ZM7.00298 13.6378C7.96669 13.5475 9.44178 13.3104 10.5179 12.684C11.7887 11.9429 12.3292 11.4982 11.7956 10.5247C11.4898 9.96511 10.776 9.64038 9.72369 10.3932C8.30154 11.4103 6.01718 11.4103 6.01718 11.4103C6.01718 11.4103 3.73247 11.4103 2.31013 10.3932C1.25805 9.64038 0.466199 10.074 0.180337 10.596C-0.318041 11.504 0.24526 11.9429 1.51593 12.684C2.60115 13.316 4.09266 13.552 5.05555 13.6397L4.25158 14.3696C3.11926 15.3974 2.02644 16.3894 1.26801 17.0774C0.814538 17.489 0.814538 18.156 1.26801 18.5673L1.40464 18.6914C1.63092 18.897 1.92729 18.9995 2.22365 19H2.228C2.52409 18.9995 2.82046 18.897 3.04674 18.6914L6.03031 15.9839L9.01398 18.6914C9.46758 19.1027 10.2027 19.1027 10.6558 18.6914L10.7927 18.5673C11.2462 18.156 11.2462 17.489 10.7927 17.0774L7.80913 14.3696L7.00298 13.6378Z" fill="#282828" />
+                  </svg>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="footer__bottom">
+      <div class="footer__bottom-inner">
+        <div class="copyright">
+          © 2012-2020 Интернет-магазин дверей “BRAVO”
+        </div>
+        <div class="payment_systems">
+          <div class="payments-title">
+            Принимаем к оплате:
+          </div>
+          <div class="payments-icons">
+            <div class="payment-item">
+              <img src="..\assets\img\visa.svg" alt="Visa">
+            </div>
+            <div class="payment-item">
+              <img src="..\assets\img\master-card.svg" alt="Master-card">
+            </div>
+            <div class="payment-item">
+              <img src="..\assets\img\mir.svg" alt="Mir">
+            </div>
+            <div class="payment-item">
+              <img src="..\assets\img\yandex.svg" alt="Yandex">
+            </div>
+            <div class="payment-item">
+              <img src="..\assets\img\paypal.svg" alt="Paypal">
+            </div>
+            <div class="payment-item">
+              <img src="..\assets\img\robokassa.svg" alt="Robokassa">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+
+
+  <div class="modal fade popup_form" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <button type="button" class="close form_close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+        <div class="modal-body">
+          <div class="form_title">
+            Вызвать замерщика
+          </div>
+          <form class="site_modal_form">
+            <input class="form_item" type="text" placeholder="Ваше имя">
+            <input class="form_item" type="text" placeholder="Ваш телефон">
+            <textarea class="form_item" placeholder="Комментарий"></textarea>
+            <button type="submit" class="popup_submit">Отправить</button>
+          </form>
+        </div>
+      </div>
     </div>
   </div>
 
+  <div class="mobile-menu-wrapper">
+
+    <div class="mobile-menu-inner">
+      <div class="menu_close"></div>
+    </div>
+  </div>
+  </div>
+  <!--site-wrapper-->
 
   <script src="js/vendor.js"></script>
   <script src="js/app.js"></script>
-
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
     window.ga = function() {
