--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="burger-btn"></div>
             <div class="header__company-text">
               <a href="#" class="logo">
-                <img src="..\assets\img\logo.svg" alt="Bravo Doors">
+                <img src=".\assets\img\logo.svg" alt="Bravo Doors">
               </a>
               <div class="description">
                 Интернет-магазин дверей Браво
@@ -123,37 +123,37 @@
           <div class="carousel-inner">
             <div class="carousel-item active">
               <div class="w-100 slider-item">
-                <img src="../assets/img/slide-1.jpg" alt="Slide_image">
+                <img src="./assets/img/slide-1.jpg" alt="Slide_image">
               </div>
             </div>
             <div class="carousel-item">
               <div class="w-100 slider-item">
-                <img src="../assets/img/slide-2.jpg" alt="Slide_image">
+                <img src="./assets/img/slide-2.jpg" alt="Slide_image">
               </div>
             </div>
             <div class="carousel-item">
               <div class="w-100 slider-item">
-                <img src="../assets/img/slide-3.jpg" alt="Slide_image">
+                <img src="./assets/img/slide-3.jpg" alt="Slide_image">
               </div>
             </div>
             <div class="carousel-item">
               <div class="w-100 slider-item">
-                <img src="../assets/img/slide-4.jpg" alt="Slide_image">
+                <img src="./assets/img/slide-4.jpg" alt="Slide_image">
               </div>
             </div>
             <div class="carousel-item">
               <div class="w-100 slider-item">
-                <img src="../assets/img/slide-5.jpg" alt="Slide_image">
+                <img src="./assets/img/slide-5.jpg" alt="Slide_image">
               </div>
             </div>
             <div class="carousel-item">
               <div class="w-100 slider-item">
-                <img src="../assets/img/slide-6.jpg" alt="Slide_image">
+                <img src="./assets/img/slide-6.jpg" alt="Slide_image">
               </div>
             </div>
             <div class="carousel-item">
               <div class="w-100 slider-item">
-                <img src="../assets/img/slide-7.jpg" alt="Slide_image">
+                <img src="./assets/img/slide-7.jpg" alt="Slide_image">
               </div>
             </div>
           </div>
@@ -175,7 +175,7 @@
                 <div class="folder_name">Арки и порталы</div>
                 <div class="products-in">15 товаров</div>
                 <picture class="folder-image">
-                  <img src="../assets/img/door-1.png" alt="Арки и порталы">
+                  <img src="./assets/img/door-1.png" alt="Арки и порталы">
                 </picture>
                 <a href="#" class="folder_link"></a>
               </div>
@@ -185,7 +185,7 @@
                 <div class="folder_name">Межкомнатные двери</div>
                 <div class="products-in">15 товаров</div>
                 <picture class="folder-image">
-                  <img src="../assets/img/door-2.jpg" alt="Межкомнатные двери">
+                  <img src="./assets/img/door-2.jpg" alt="Межкомнатные двери">
                 </picture>
                 <a href="#" class="folder_link"></a>
               </div>
@@ -195,7 +195,7 @@
                 <div class="folder_name">Входные двери</div>
                 <div class="products-in">15 товаров</div>
                 <picture class="folder-image">
-                  <img src="../assets/img/door-3.jpg" alt="Входные двери">
+                  <img src="./assets/img/door-3.jpg" alt="Входные двери">
                 </picture>
                 <a href="#" class="folder_link"></a>
               </div>
@@ -205,7 +205,7 @@
                 <div class="folder_name">ПВХ (гармошка)</div>
                 <div class="products-in">15 товаров</div>
                 <picture class="folder-image">
-                  <img src="../assets/img/door-4.jpg" alt="ПВХ (гармошка)">
+                  <img src="./assets/img/door-4.jpg" alt="ПВХ (гармошка)">
                 </picture>
                 <a href="#" class="folder_link"></a>
               </div>
@@ -215,7 +215,7 @@
                 <div class="folder_name">Стекянные двери</div>
                 <div class="products-in">15 товаров</div>
                 <picture class="folder-image">
-                  <img src="../assets/img/door-5.jpg" alt="Стекянные двери">
+                  <img src="./assets/img/door-5.jpg" alt="Стекянные двери">
                 </picture>
                 <a href="#" class="folder_link"></a>
               </div>
@@ -225,7 +225,7 @@
                 <div class="folder_name">Для ванны и туалета</div>
                 <div class="products-in">15 товаров</div>
                 <picture class="folder-image">
-                  <img src="../assets/img/door-6.jpg" alt="Для ванны и туалета">
+                  <img src="./assets/img/door-6.jpg" alt="Для ванны и туалета">
                 </picture>
                 <a href="#" class="folder_link"></a>
               </div>
@@ -235,7 +235,7 @@
                 <div class="folder_name">Раздвижные двери</div>
                 <div class="products-in">15 товаров</div>
                 <picture class="folder-image">
-                  <img src="../assets/img/door-7.png" alt="Раздвижные двери">
+                  <img src="./assets/img/door-7.png" alt="Раздвижные двери">
                 </picture>
                 <a href="#" class="folder_link"></a>
               </div>
@@ -245,7 +245,7 @@
                 <div class="folder_name">Двойные двери</div>
                 <div class="products-in">15 товаров</div>
                 <picture class="folder-image">
-                  <img src="../assets/img/door-8.jpg" alt="Двойные двери">
+                  <img src="./assets/img/door-8.jpg" alt="Двойные двери">
                 </picture>
                 <a href="#" class="folder_link"></a>
               </div>
@@ -255,7 +255,7 @@
                 <div class="folder_name">Складные двери</div>
                 <div class="products-in">15 товаров</div>
                 <picture class="folder-image">
-                  <img src="../assets/img/door-9.jpg" alt="Складные двери">
+                  <img src="./assets/img/door-9.jpg" alt="Складные двери">
                 </picture>
                 <a href="#" class="folder_link"></a>
               </div>
@@ -271,7 +271,7 @@
               <div class="col-6 col-md-4 col-sm-4 col-lg-2 feature-outer">
                 <div class="features-item">
                   <div class="features-image">
-                    <img src="../assets/img/features-1.svg" alt="Цена от производителя">
+                    <img src="./assets/img/features-1.svg" alt="Цена от производителя">
                   </div>
                   <div class="features-title">Цена от производителя</div>
                   <div class="features-text">Мы являемся официальными дилерами производителей</div>
@@ -280,7 +280,7 @@
               <div class="col-6 col-md-4 col-sm-4 col-lg-2 feature-outer">
                 <div class="features-item">
                   <div class="features-image">
-                    <img src="../assets/img/features-2.svg" alt="Огромный выбор">
+                    <img src="./assets/img/features-2.svg" alt="Огромный выбор">
                   </div>
                   <div class="features-title">Огромный выбор</div>
                   <div class="features-text">В наших магазинах двери самых популярных производителей</div>
@@ -289,7 +289,7 @@
               <div class="col-6 col-md-4 col-sm-4 col-lg-2 feature-outer">
                 <div class="features-item">
                   <div class="features-image">
-                    <img src="../assets/img/features-3.svg" alt="Комплексный подход">
+                    <img src="./assets/img/features-3.svg" alt="Комплексный подход">
                   </div>
                   <div class="features-title">Комплексный подход</div>
                   <div class="features-text">Не только продадим вам двери, но и доставим, и установим, и дадим гарантию</div>
@@ -298,7 +298,7 @@
               <div class="col-6 col-md-4 col-sm-4 col-lg-2 feature-outer">
                 <div class="features-item">
                   <div class="features-image">
-                    <img src="../assets/img/features-4.svg" alt="Бесплатный замер">
+                    <img src="./assets/img/features-4.svg" alt="Бесплатный замер">
                   </div>
                   <div class="features-title">Бесплатный замер</div>
                   <div class="features-text">Профессиональный замерщик сделает необходимые замеры и поможет выбрать нужную дверь</div>
@@ -307,7 +307,7 @@
               <div class="col-6 col-md-4 col-sm-4 col-lg-2 feature-outer">
                 <div class="features-item">
                   <div class="features-image">
-                    <img src="../assets/img/features-5.svg" alt="Бесплатная доставка">
+                    <img src="./assets/img/features-5.svg" alt="Бесплатная доставка">
                   </div>
                   <div class="features-title">Бесплатная доставка</div>
                   <div class="features-text">По Москве в пределах МКАД при заказе от 4х дверей</div>
@@ -316,7 +316,7 @@
               <div class="col-6 col-md-4 col-sm-4 col-lg-2 feature-outer">
                 <div class="features-item">
                   <div class="features-image">
-                    <img src="../assets/img/features-6.svg" alt="Гарантия 1 год">
+                    <img src="./assets/img/features-6.svg" alt="Гарантия 1 год">
                   </div>
                   <div class="features-title">Гарантия 1 год</div>
                   <div class="features-text">Мы даем гарантию 1 год на установку дверей</div>
@@ -465,22 +465,22 @@
             </div>
             <div class="payments-icons">
               <div class="payment-item">
-                <img src="..\assets\img\visa.svg" alt="Visa">
+                <img src=".\assets\img\visa.svg" alt="Visa">
               </div>
               <div class="payment-item">
-                <img src="..\assets\img\master-card.svg" alt="Master-card">
+                <img src=".\assets\img\master-card.svg" alt="Master-card">
               </div>
               <div class="payment-item">
-                <img src="..\assets\img\mir.svg" alt="Mir">
+                <img src=".\assets\img\mir.svg" alt="Mir">
               </div>
               <div class="payment-item">
-                <img src="..\assets\img\yandex.svg" alt="Yandex">
+                <img src=".\assets\img\yandex.svg" alt="Yandex">
               </div>
               <div class="payment-item">
-                <img src="..\assets\img\paypal.svg" alt="Paypal">
+                <img src=".\assets\img\paypal.svg" alt="Paypal">
               </div>
               <div class="payment-item">
-                <img src="..\assets\img\robokassa.svg" alt="Robokassa">
+                <img src=".\assets\img\robokassa.svg" alt="Robokassa">
               </div>
             </div>
           </div>
